fix greeting padding on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -72,7 +72,7 @@ body {
 }
 
 @media (max-width: 640px) {
-  .container {
+  .content {
     padding: 0.5rem 1rem;
   }
 }
